--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,7 +43,7 @@
         <li>Computers</li>
         <li>Mobile Devices</li>
         <li>Books</li>
-        <li>Sesquatch</li>
+        <li>Sasquatch</li>
       </ul>
     </div>
 
